Bug 1736049 - Stop calling `[[NSCursor currentCursor] set]` on every mouse move. r=emilio, a=RyanVM

This was only necessary when we had binary plug-ins overriding the cursor from under us.
We no longer support plug-ins.

Calling -[NSCursor set] has a performance cost on macOS Monterey when
cursor accessibility coloring is enabled, so we want to avoid calling it
unnecessarily. It also leaks memory in the current Monterey Beta (see
bug 1735345), so calling it less often will leak less memory.

I have checked the testcases of bug 496601 and of bug 1423275, they still
work as expected with this fix.

Differential Revision: https://phabricator.services.mozilla.com/D128612